# tte

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.server  README.md  makefile
.cargo/: config.toml
.github/workflows/: ut.yaml
benches/: ledger.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs  parser.rs  smart.rs
crates/core/: Cargo.toml  build.rs
crates/core/protobuf/: oms.proto
crates/core/src/: build.rs  err_code.rs  id.rs  lib.rs  precision.rs  time.rs  types.rs
crates/core/src/pbcode/: oms.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  kafka.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: spot.rs  testkit.rs
crates/match_engine/: Cargo.toml
crates/match_engine/src/: egress.rs  lib.rs  orderbook.rs  service.rs  state_machine.rs  types.rs
crates/msg_sync/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/msg_sync/protobuf/: msgsync.proto
crates/msg_sync/src/: buffer.rs  error.rs  lib.rs  metrics.rs  ring_buffer.rs  storage.rs  traits.rs  transport.rs
crates/msg_sync/src/pbcode/: mod.rs  msgsync.rs
crates/msg_sync/tests/: integration_test.rs  transport_integration.rs
crates/oms/: Cargo.toml
crates/oms/src/: error.rs  oms.rs  service.rs
crates/rlr/: AGENTS.md  Cargo.toml  build.rs
crates/rlr/protobuf/: raft.proto
crates/rlr/src/: lib.rs  network.rs  node.rs  rlr.rs  state_machine.rs  storage.rs  tests.rs  types.rs  util.rs
crates/rlr/src/network/: callee.rs
crates/rlr/src/pbcode/: ext.rs  mod.rs  raft.rs
crates/rlr/src/pbext/: mod.rs
crates/rlr/src/types/: mod.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: api.rs  default.rs  error.rs  lib.rs  raft.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  test.rs
crates/server/tests/cluster/: main.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs  testkit.rs
crates/tests/: Cargo.toml  mod.rs
deploy/: cmds  docker-compose.yaml
deploy/dev/: docker-compose.yaml
src/: client.rs  lib.rs  me.rs  server.rs
src/ proto/: oms.pb
src/common/: err_code.rs  mod.rs  types.rs
src/infra/: config.rs  kafka.rs
src/ledger/: mod.rs  spot.rs  testkit.rs
src/match_engine/: mod.rs  orderbook.rs  service.rs
src/oms/: error.rs  mod.rs  oms.rs  service.rs
src/pb/: oms.proto
src/pbcode/: mod.rs  oms.rs
src/sequencer/: api.rs  mod.rs
src/testkit/: mod.rs  testkit.rs
tests/: integration_test.rs
tests/cluster/: docker-compose.yaml
tests/data/: checker.py  snapshot_check.py
tests/integration/: docker-compose.yaml  testcase_cancel.case  testcase_fill.case  testcase_massive.case  testcase_p_filled_and_cancel.case  testcase_snapshot.case
tests/integration/init/: ddl.sql
tests/intergration_test/: fill.case  makefile  partially_filled_and_cancel.case  place_order.case  snapshot.case
