[package]
name = "tte"
version = "0.1.0"
edition = "2024"


# 启用构建脚本
build = "src/build/build.rs"


[lib]
name = "trade_engine"
path = "src/lib.rs"

[[bin]]
name = "mvp_server"
path = "src/server.rs"


[[bin]]
name = "mvp_client"
path = "src/client.rs"


[dependencies]
rust_decimal ={ version = "1.39" }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.48", features = ["full"] }
rust_decimal_macros = "1.39.0"
log = "0.4"
criterion = "0.7.0"
getset = "0.1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.2"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.9"}

[[bench]]
name = "ledger"
harness = false
