[package]
name = "tte"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/core",
    "crates/infra",
    "crates/rlr",
    "crates/sequencer" ,
    "crates/ledger" ,
    "crates/match_engine"  ,
    "crates/oms",
    "crates/server",
    "crates/client",
    "crates/testkit",
    "crates/tests",
    "crates/msg_sync",
]

[workspace.dependencies]
rust_decimal = { version = "1.39" }
tonic = {version = "0.14"}
prost = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tokio = { version = "1.48", features = ["full"] }
rust_decimal_macros = "1.39.0"
log = "0.4"
criterion = "0.7.0"
getset = "0.1.6"
rand = "0.9.2"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
opentelemetry = "0.31.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter"]}
tracing-opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
tracing-appender = "0.2.3"
opentelemetry-appender-tracing = "0.31.1"
tonic-tracing-opentelemetry = "0.32.0"
prometheus = "0.14"
rdkafka = "0.38.0"
futures = "0.3.31"
# clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.68"
serde_json = "1.0.145"
lazy_static = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
openraft = { git = "https://github.com/Tsumida/openraft.git", branch = "main", features = ["serde", "tracing-log", "type-alias"]}
thiserror = "1.0.68"
byteorder = "1.4.3"
rocksdb = { version = "0.24.0"}
anyhow = "1.0.100"
tempfile = { version = "3.4.0" }
temp-env = { version = "0.3.6" }

[build-dependencies]
tonic-prost-build = "0.14"
