[package]
name = "tte-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mvp_client"
path = "src/main.rs"

[dependencies]
rust_decimal.workspace = true 
tokio.workspace = true
prost.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-appender.workspace = true
opentelemetry-appender-tracing.workspace = true
tonic-tracing-opentelemetry.workspace = true
clap.workspace = true
chrono.workspace = true

tte-core = { path = "../core" }
# tte-infra = { path = "../infra" }
# tte-oms = { path = "../oms" }
# tte-ledger = { path = "../ledger" }
# tte-me = { path = "../match_engine" }