[package]
name = "tte-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
rust_decimal.workspace = true
prost.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
getset.workspace = true
chrono.workspace = true
tonic-prost.workspace = true

[build-dependencies]
# 构建依赖，由 build.rs 使用
tonic-prost-build = "0.14"