[package]
name = "tte-rlr"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
getset = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true}

# use fork in https://github.com/Tsumida/openraft/tree/main
openraft = { workspace = true }
rocksdb = { workspace = true}
# openraft = { workspace = true }

[build-dependencies]
# 构建依赖，由 build.rs 使用
prost-build = "0.12"
tonic-build = "0.9"
