[package]
name = "tte-sequencer"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[dependencies]
chrono.workspace = true
tonic.workspace = true
tokio.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-appender.workspace = true
opentelemetry-appender-tracing.workspace = true
tonic-tracing-opentelemetry.workspace = true